# packaging

./: .gitignore  .pre-commit-config.yaml  GITHUB_ACTIONS.md  README.md  build-package.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: pre-commit.yml  publish.yaml  pylint.yml
packaging_demo/: colorized_demo.py  my_file.py
packaging_demo/my_folder/: cities.json
