[build-system]
# Minimum requirements for the build system to execute.
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"packaging_demo.my_folder" = ["*.json"]

[project]
name = "packaging-demo"
authors = [{ name = "HubZar", email = "your_email@example.com" }]
description = "My package description"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["one", "two"]
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["fastapi"]
version = '0.0.0'

[project.optional-dependencies]
dev = ['ruff', 'mypy', 'black']
colors = ['rich']
graphs = ['pipdeptree', 'graphviz']
all = ['packaging_demo[dev, colors, graphs]']

[tool.black]
line-length = 99
exclude = "venv"

[tool.ruff]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
lint.select = ["E4", "E7", "E9", "F", "B", "ERA"]

# 2. Avoid enforcing line-length violations (`E501`)
lint.ignore = ["E501", 'F401']

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
lint.unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
